--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <br>
         <br />
         Please contact Julia at 
-          <a class="email" href="mailto:julia.proteina@gmail.com" ><em>julia.proteina@gmail.com</em></a> for room availability and bookings.
+          <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation" ><em>julia.proteina@gmail.com</em></a> for room availability and bookings.
       </p>
 
       <section class="accommodation-grid">
