--- a/index.html
+++ b/index.html
@@ -318,9 +318,12 @@
       <p>
         The estate provides accommodation for up to 50 guests. Most rooms in the Manor House and The Jonkerhuis will be used for family.
         <br>
-        <br />
+        <br>
+        Take a <a href="https://my.deltabusinessdesign.com/tour/webersburg-wine-estate" target="_blank">virtual tour</a> of the estate!
+        <br>
+        <br >
         Please contact Julia at 
-          <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation" ><em>julia.proteina@gmail.com</em></a> for room availability and bookings.
+          <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation" ><em>Julia.Proteina@Gmail.com</em></a> for room availability and bookings.
       </p>
 
       <section class="accommodation-grid">
@@ -598,10 +601,12 @@
 
               <div class="contact-details">
                 <h3>Email</h3>
-                <a class="email" href="mailto:Dvheerden@Hotmail.co.za"
-                  >Dvheerden@Hotmail.co.za</a
-                >
+                <a class="email" href="mailto:Dvheerden@Hotmail.co.za?subject=Wedding Inquiry"
+                  >Dvheerden@Hotmail.co.za</a>
+                <a class="email" href="mailto:julia.proteina@gmail.com?subject=Wedding Inquiry"
+                  >Julia.Proteina@Gmail.com</a>
               </div>
+              
             </div>
 
             <div class="contact-item">
