--- a/index.html
+++ b/index.html
@@ -466,7 +466,9 @@
           <h3>Flights</h3>
           <ul>
             <li>
-              From Hong Kong: Fly direct with
+              From Hong Kong: 
+              <br>
+              Fly direct with
               <a href="https://www.cathaypacific.com/" target="_blank"
                 >Cathay Pacific</a
               >
@@ -474,12 +476,12 @@
             </li>
             <li>
               Other options from Hong Kong:
+              <br>
               <a href="https://www.qatarairways.com/" target="_blank"
                 >Qatar Airways</a
               >
               to Cape Town via Doha.
               <br />
-              Or
               <a href="https://www.emirates.com/" target="_blank">Emirates</a>
               to Cape Town via Dubai.
               <br />
@@ -497,7 +499,9 @@
             </li>
             <br />
             <li>
-              From Johannesburg: Fly direct to Cape Town, with either
+              From Johannesburg: 
+              <br>
+              Fly direct to Cape Town, with either
               <a href="https://www.flysafair.com/" target="_blank">FlySafair</a
               >,
               <a href="https://www.lift.co.za/" target="_blank">Lift Airways</a
@@ -511,7 +515,9 @@
               >.
             </li>
             <li>
-              From Cape Town: Use Uber or Bolt to get to Webersburg from the
+              From Cape Town: 
+              <br>
+              Use Uber or Bolt to get to Webersburg from the
               airport. Or rent a car from
               <a href="https://www.hertz.co.za/" target="_blank">Hertz</a>,
               <a href="http://www.budget.co.za/" target="_blank">Budget</a>,
@@ -557,7 +563,7 @@
                 target="_blank"
                 >Table Mountain</a
               >
-              is a must do with a beautiful view of the city and the ocean.
+              is one of the 7 Wonders of Nature and is a must do with a beautiful view of the city and the ocean.
             </li>
             <li>
               <a href="https://capepoint.co.za/" target="_blank">Cape Point</a>
@@ -583,6 +589,9 @@
                 South African Tourism website</a
               >
               to find more activities.
+            </li>
+            <li>
+              Webersburg Wine Estate offers wine tatsing, tennis and swimming facilities.
             </li>
           </ul>
         </div>
