--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <br>
         <br >
         Please contact Julia at 
-          <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation" ><em>Julia.Proteina@Gmail.com</em></a> for room availability and bookings.
+          <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation&cc=dvheerden@hotmail.co.za,peony_cheung0613@hotmail.com" ><em>Julia.Proteina@Gmail.com</em></a> for room availability and bookings.
       </p>
 
       <section class="accommodation-grid">
@@ -665,7 +665,11 @@
         <div class="notification-modal-content">
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
-          <p>Rooms bookings are now open for Webersburg Wine Estate, check out the accommodation section!</p>
+          <p>Rooms bookings are now open for Webersburg Wine Estate, check out the accommodation section!
+            <br>
+            <br>
+            Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions.
+          </p>
         </div>
       </div>
     </div>
