--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <i class="fa-solid fa-heart"></i>
       <i class="fa-solid fa-heart"></i>
       <i class="fa-solid fa-heart"></i>
+      <i class="fa-solid fa-heart"></i>
     </div>
 
     <div class="navbar">
