index.html update

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <div class="header-images">
         <div class="image-container-peony">
           <img src="images/peony1.jpg" alt="Picture of Peony" loading="eager" />
-          <div class="image-caption">Peony</div>
+          <div class="image-caption"><span class="notranslate">Peony</span></div>
         </div>
         <div class="image-container-dane">
           <img src="images/dane2.jpg" alt="Picture of Dane" loading="eager" />
-          <div class="image-caption">Dane</div>
+          <div class="image-caption"><span class="notranslate"></span>Dane</span></div>
         </div>
       </div>
       <p class="header-text">
@@ -90,7 +90,7 @@
         day.
         <br />
         <br />
-        Peony & Dane
+        <span class="notranslate">Peony & Dane</span>
       </p>
     </div>
 
@@ -323,7 +323,7 @@
         Take a <a href="https://my.deltabusinessdesign.com/tour/webersburg-wine-estate" target="_blank">virtual tour</a> of the estate!
         <br>
         <br >
-        Please contact Julia at 
+        Please contact <span class="notranslate">Julia</span> at 
           <a class="email" href="mailto:julia.proteina@gmail.com?subject=Webersburg Accommodation&cc=dvheerden@hotmail.co.za,peony_cheung0613@hotmail.com" ><em>Julia.Proteina@Gmail.com</em></a> for room availability and bookings.
       </p>
 
@@ -625,8 +625,8 @@
               </div>
               <div class="contact-details">
                 <h3>Phone / WhatsApp</h3>
-                <a class="tel" href="tel:+85269767322">Dane: 6976 7322</a><br />
-                <a class="tel" href="tel:+85266432013">Peony: 6643 2013</a>
+                <a class="tel" href="tel:+85269767322"> <span class="notranslate">Dane</span>: 6976 7322</a><br />
+                <a class="tel" href="tel:+85266432013"> <span class="notranslate">Peony</span>: 6643 2013</a>
               </div>
             </div>
 
