--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="image-container-dane">
           <img src="images/dane2.jpg" alt="Picture of Dane" loading="eager" />
-          <div class="image-caption"><span class="notranslate"></span>Dane</span></div>
+          <div class="image-caption"><span class="notranslate">Dane</span></div>
         </div>
       </div>
       <p class="header-text">
