--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a href="#RSVP">RSVP</a>
         <a href="#Getting-There">Getting There</a>
         <a href="#Contact">Contact</a>
+        <div id="google_translate_element"></div>
       </div>
     </div>
     <div class="mobile-menu-overlay"></div>
@@ -653,6 +654,7 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="./script.js"></script>
 
     <!-- Floating Notification Button and Modal -->
