--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="#RSVP">RSVP</a>
         <a href="#Getting-There">Getting There</a>
         <a href="#Contact">Contact</a>
-        <div id="google_translate_element"></div>
+        <div class="translate-container" id="google_translate_element"></div>
       </div>
     </div>
     <div class="mobile-menu-overlay"></div>
