Change to gtranslate

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="#RSVP">RSVP</a>
         <a href="#Getting-There">Getting There</a>
         <a href="#Contact">Contact</a>
-        <div class="translate-container" id="google_translate_element"></div>
+        <div class="gtranslate_wrapper"></div>
       </div>
     </div>
     <div class="mobile-menu-overlay"></div>
@@ -654,7 +654,8 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["af","en","fr","de","hi","pt","sn","tl","xh","zu","ja","zh-CN","zh-TW"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"inline","float_switcher_open_direction":"up","alt_flags":{"pt":"brazil"}}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/dropdown.js" defer></script>
     <script src="./script.js"></script>
 
     <!-- Floating Notification Button and Modal -->
