--- a/index.html
+++ b/index.html
@@ -672,6 +672,9 @@
           <p>Rooms bookings are now open for Webersburg Wine Estate, check out the accommodation section!
             <br>
             <br>
+            Please take a moment to explore the virtual tour of the estate, the link is located in the accommodation section. 
+            <br>
+            <br>
             Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions.
           </p>
         </div>
