--- a/index.html
+++ b/index.html
@@ -676,6 +676,9 @@
             <br>
             <br>
             Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions.
+            <br>
+            <br>
+        <div class="gtranslate_wrapper"></div>
           </p>
         </div>
       </div>
