--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I890<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -669,13 +669,13 @@
         <div class="notification-modal-content">
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
-          <p>Rooms bookings are now open for Webersburg Wine Estate, check out the accommodation section!
+          <p>Room bookings are now open for Webersburg Wine Estate, check out the accommodation section!
             <br>
             <br>
             Please take a moment to explore the virtual tour of the estate, the link is located in the accommodation section. 
             <br>
             <br>
-            Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions.
+            Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions. Otherwise, feel free to take as many photos and videos as you want. 
             <br>
             <br>
         <div class="gtranslate_wrapper"></div>
