--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["af","en","fr","de","hi","pt","sn","tl","xh","zu","ja","zh-CN","zh-TW"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"inline","float_switcher_open_direction":"up","alt_flags":{"pt":"brazil"}}</script>
+    <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","af","de","fr","hi","ja","pt","sn","tl","xh","zu","zh-CN","zh-TW"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"inline","float_switcher_open_direction":"up"}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/dropdown.js" defer></script>
     <script src="./script.js"></script>
 
