--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         The following itinerary is a guide to the events planned for the day, it
         will be finalised closer to the date.
       </p>
-      <img src="images/itinerary.jpeg" alt="Itinerary" loading="lazy" />
+      <img src="images/itinerary.jpg" alt="Itinerary" loading="lazy" />
       <p>
         Predrinks and canapés will be served before the ceremony.
         <br />
