--- a/index.html
+++ b/index.html
@@ -669,10 +669,7 @@
         <div class="notification-modal-content">
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
-          <p>Room bookings are now open for Webersburg Wine Estate, check out the accommodation section!
-            <br>
-            <br>
-            Please take a moment to explore the virtual tour of the estate, the link is located in the accommodation section. 
+          <p>Room bookings are now open, please take a moment to explore the virtual tour of Webersburg Wine Estate. Check out the accommodation section for more!
             <br>
             <br>
             Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions. Otherwise, feel free to take as many photos and videos as you want. 
