--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
     <section id="Date">
       <h2>Save the date:</h2>
       <br />
-      <h2 class="deadline">01 December 2025</h2>
+      <h2 class="deadline">01 December 2025
+        <br>16:00 
+      </h2>
       <p class="countdown">The countdown</p>
       <div id="clockdiv">
         <div>
@@ -151,8 +153,7 @@
       <p>
         Predrinks and canapés will be served before the ceremony.
         <br />
-        Dinner will be served during the ceremony, more details will be provided
-        closer to the date.
+        Dinner will be served during the ceremony, A plated dinner service will be available, please makew your choices asap.
         <br />
         The Bistro will not be open for lunch during the day of the wedding,
         guests will have to visit nearby estates or Stellenbosch to find
@@ -415,14 +416,14 @@
               </div>
             </a>
 
-            <a href="javascript:void(0)" onclick="songNotReady()">
+            <!-- <a href="javascript:void(0)" onclick="songNotReady()">
               <div class="feature-item">
                 <span class="feature-icon">
                   <i class="fa-solid fa-headphones"></i>
                 </span>
                 <p>A Spotify playlist will be available soon</p>
               </div>
-            </a>
+            </a> -->
 
             <a
               href="https://www.icloud.com/invites/090jECHMOrYwPV1o0PC4NOFyA"
@@ -436,12 +437,12 @@
               </div>
             </a>
 
-            <a href="javascript:void(0)" onclick="foodNotReady()">
+            <a href="https://forms.office.com/r/CaAuHGn99k" target="_blank">
               <div class="feature-item">
                 <span class="feature-icon">
                   <i class="fa-solid fa-utensils"></i>
                 </span>
-                <p>View food and beverage details here</p>
+                <p>Please fill out the dinner preference form if you have not already!</p>
               </div>
             </a>
 
@@ -669,7 +670,10 @@
         <div class="notification-modal-content">
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
-          <p>Room bookings are now open, please take a moment to explore the virtual tour of Webersburg Wine Estate. Check out the accommodation section for more!
+          <p>There will be a welcome dinner held at <a href="https://maps.app.goo.gl/z9iqq81KLsEBikAC7" target="_blank"> La Pineta</a> restaurant on the 30th November at 18h00!! All are welcome.</p>
+          <br>
+          <br>
+          <p>Please fill out the <a href="https://forms.office.com/r/CaAuHGn99k" target="_blank"> dinner preference form</a> if you have not already!
             <br>
             <br>
             Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions. Otherwise, feel free to take as many photos and videos as you want. 
