--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
           <p>There will be a welcome dinner held at <a href="https://maps.app.goo.gl/z9iqq81KLsEBikAC7" target="_blank"> La Pineta</a> restaurant on the 30th November at 18h00!! All are welcome.</p>
           <br>
           <br>
-          <p>Please fill out the <a href="https://forms.office.com/r/CaAuHGn99k" target="_blank"> dinner preference form</a> if you have not already!
+          <p>Please fill out the <a href="https://forms.office.com/r/CaAuHGn99k" target="_blank"> dinner preference form</a> for the wedding ceremony if you have not already!
             <br>
             <br>
             Please be advised: We will have professional photographers and videographers at the wedding. Please avoid using your phones or cameras during the ceremony and speeches, as we want to capture these moments without distractions. Otherwise, feel free to take as many photos and videos as you want. 
