--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p class="header-text">
         Please take take a moment to add to the <a href="https://www.icloud.com/invites/090jECHMOrYwPV1o0PC4NOFyA" target="_blank">iCloud</a> photo album!
         <br />
-        We will share a ink to the professional photos and videos after they are ready.
+        We will share a link to the professional photos and videos after they are ready.
         <br />
         <span class="notranslate">Peony & Dane</span>
       </p>
